support and edit imgs

--- a/cart.html
+++ b/cart.html
@@ -21,7 +21,7 @@
             <nav class="aside-nav-container">
                 <a href="/#tendencias">Tendencias</a>
                 <a href="/#mas-vendidos">Más Vendidos</a>
-                <a href="/soporte">Soporte</a>
+                <a href="/soporte.html">Soporte</a>
                 <a href="/contacto.html">Contacto</a>
             </nav>
         </div>
@@ -92,7 +92,7 @@
         <div class="cart-container">
             <div class="cart-game">
                 <a href="#">
-                    <img src="./public/imgs/games/fallout-76-pc-game-steam-cover.jpg" alt="buckshot-roulette">
+                    <img src="./public/imgs/games/mas-vendidos/fallout-76-pc-game-steam-cover.jpg" alt="fallout-76">
                 </a>
                 <div class="game-info">
                     <p>Fallout 76</p>
@@ -102,8 +102,8 @@
             </div>
             <div class="cart-game">
                 <a href="#">
-                    <img src="./public/imgs/games/grand-theft-auto-v-premium-online-edition-premium-online-edition-pc-game-rockstar-cover.jpg"
-                        alt="buckshot-roulette">
+                    <img src="./public/imgs/games/mas-vendidos/grand-theft-auto-v-premium-online-edition-premium-online-edition-pc-game-rockstar-cover.jpg"
+                        alt="grand-theft-auto-v-premium">
                 </a>
                 <div class="game-info">
                     <p>Grand Theft Auto V: Premium Online Edition</p>
@@ -113,8 +113,7 @@
             </div>
             <div class="cart-game">
                 <a href="#">
-                    <img src="./public/imgs/games/another-crab-s-treasure-pc-game-steam-cover.jpg"
-                        alt="buckshot-roulette">
+                    <img src="./public/imgs/games/another-crab-s-treasure-pc-game-steam-cover.jpg" alt="another-crab">
                 </a>
                 <div class="game-info">
                     <p>Another Crab's Treasure</p>
