--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
             <nav class="aside-nav-container">
                 <a href="/#tendencias">Tendencias</a>
                 <a href="/#mas-vendidos">Más Vendidos</a>
-                <a href="/soporte">Soporte</a>
+                <a href="/soporte.html">Soporte</a>
                 <a href="/contacto.html">Contacto</a>
             </nav>
         </div>
