--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav class="aside-nav-container">
                 <a href="/#tendencias">Tendencias</a>
                 <a href="/#mas-vendidos">Más Vendidos</a>
-                <a href="/soporte">Soporte</a>
+                <a href="/soporte.html">Soporte</a>
                 <a href="/contacto.html">Contacto</a>
             </nav>
         </div>
@@ -96,35 +96,62 @@
             <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="3500">
-                        <img src="./public/imgs/ghost-of-tsushima.jpg" class="d-block w-100 wallpaper-carousel"
-                            alt="ghost-of-tsushima">
+                        <img src="./public/imgs/elden-ring.png" class="d-block w-100 wallpaper-carousel opacity-75"
+                            alt="elden-ring">
                         <div class="main-text">
-                            <h2>Ghost of Tsushima</h2>
-                            <div>
-                                <p>-32%</p>
-                                <span>$47.26</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item" data-bs-interval="3500">
-                        <img src="./public/imgs/dragon-dogma.jpg" class="d-block w-100 wallpaper-carousel"
-                            alt="dragon-dogma">
-                        <div class="main-text">
-                            <h2>Dragon's Dogma 2</h2>
-                            <div>
-                                <p>-50%</p>
-                                <span>$42.59</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item" data-bs-interval="3500">
-                        <img src="./public/imgs/the-last-of-us.jpeg" class="d-block w-100 wallpaper-carousel"
-                            alt="the-last-of-us">
-                        <div class="main-text">
-                            <h2>The Last of Us Part 1</h2>
+                            <span class="date-text">Fecha de salida: 21 de junio de 2024</span>
+                            <h2>Elden Ring - Shadow of the Erdtree</h2>
                             <div>
                                 <p>-20%</p>
-                                <span>$40.99</span>
+                                <span>$34.55</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3500">
+                        <img src="./public/imgs/alien-rogue.webp" class="d-block w-100 wallpaper-carousel opacity-75"
+                            alt="alien-rogue">
+                        <div class="main-text">
+                            <span class="date-text">Fecha estimada: 2024</span>
+                            <h2>Alien: Rogue Incursion</h2>
+                            <div>
+                                <p>-5%</p>
+                                <span>$80.29</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3500">
+                        <img src="./public/imgs/phantom-blade.jpg" class="d-block w-100 wallpaper-carousel opacity-75"
+                            alt="panthom-blade">
+                        <div class="main-text">
+                            <span class="date-text">Fecha estimada: 2024</span>
+                            <h2>Phantom Blade Zero </h2>
+                            <div>
+                                <p>-12%</p>
+                                <span>$76.49</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3500">
+                        <img src="./public/imgs/destiny-2-the-final-shape.jpeg"
+                            class="d-block w-100 wallpaper-carousel opacity-50" alt="Destiny 2: The Final Shape">
+                        <div class="main-text">
+                            <span class="date-text">Fecha de salida: 4 de junio de 2024</span>
+                            <h2>Destiny 2: The Final Shape</h2>
+                            <div>
+                                <p>-25%</p>
+                                <span>$40.07</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3500">
+                        <img src="./public/imgs/call-of-duty-modern-2560x1440-12629.jpg"
+                            class="d-block w-100 wallpaper-carousel opacity-25" alt="call-of-duty-modern">
+                        <div class="main-text">
+                            <span class="date-text">Fecha de salida: 10 de noviembre de 2023</span>
+                            <h2>Call of Duty: Modern Warfare III</h2>
+                            <div>
+                                <p>-10%</p>
+                                <span>$78.99</span>
                             </div>
                         </div>
                     </div>
@@ -150,79 +177,78 @@
                 <div>
                     <a href="#">
                         <div>
-                            <img src="./public/imgs/games/buckshot-roulette-pc-juego-steam-cover.jpg"
-                                alt="buckshot-roulette">
-                            <span class="discount">-24%</span>
+                            <img src="./public/imgs/games/tendencias/elden-ring.jpg"
+                                alt="elden-ring-shadow-of-the-erdtree">
+                            <span class="discount">-20%</span>
                         </div>
                     </a>
                     <div class="game-info">
-                        <p>Buckshot Roulette</p>
-                        <p>$2.68</p>
+                        <p>Elden Ring - Shadow of the Erdtree</p>
+                        <p>$34.55</p>
                     </div>
                 </div>
                 <div>
                     <a href="#">
                         <div>
-                            <img src="./public/imgs/games/destiny-2-la-forma-final-pase-anual-dlc-season-pc-juego-steam-cover.jpg"
-                                alt="buckshot-roulette">
-                            <span class="discount">-24%</span>
+                            <img src="./public/imgs/games/tendencias/destiny-2-the-final-shape.jpg"
+                                alt="destiny-2-the-final-shape">
+                            <span class="discount">-25%</span>
                         </div>
                     </a>
                     <div class="game-info">
-                        <p>Destiny 2: La Forma Final + Pase anual</p>
-                        <p>$79.13</p>
+                        <p>Destiny 2: The Final Shape</p>
+                        <p>$40.07</p>
                     </div>
                 </div>
                 <div>
                     <a href="#">
                         <div>
-                            <img src="./public/imgs/games/dying-light-2-stay-human-reloaded-edition-reloaded-edition-pc-juego-steam-cover.jpg"
-                                alt="buckshot-roulette">
-                            <span class="discount">-24%</span>
-                        </div>
-                    </a>
-                    <div class="game-info">
-                        <p>Dying Light 2 Stay Human Reloaded Edition</p>
-                        <p>$21.52</p>
-                    </div>
-                </div>
-                <div>
-                    <a href="#">
-                        <div>
-                            <img src="./public/imgs/games/farming-simulator-22-farm-production-pack-pc-juego-steam-cover.jpg"
-                                alt="buckshot-roulette">
-                            <span class="discount">-24%</span>
-                        </div>
-                    </a>
-                    <div class="game-info">
-                        <p>Farming Simulator 22</p>
-                        <p>$6.45</p>
-                    </div>
-                </div>
-                <div>
-                    <a href="#">
-                        <div>
-                            <img src="./public/imgs/games/ghost-of-tsushima-director-s-cut-pc-juego-steam-cover.jpg"
-                                alt="buckshot-roulette">
-                            <span class="discount">-24%</span>
+                            <img src="./public/imgs/games/tendencias/ghost-of-tsushima-director-s-cut-pc-juego-steam-cover.jpg"
+                                alt="ghost-of-tsushima-director">
+                            <span class="discount">-26%</span>
                         </div>
                     </a>
                     <div class="game-info">
                         <p>Ghost of Tsushima: Director's Cut</p>
-                        <p>$49.52</p>
+                        <p>$47.40</p>
                     </div>
                 </div>
                 <div>
                     <a href="#">
                         <div>
-                            <img src="./public/imgs/games/the-elder-scrolls-online-deluxe-upgrade-gold-road-deluxe-upgrade-pc-juego-steam-cover.jpg"
-                                alt="buckshot-roulette">
-                            <span class="discount">-24%</span>
+                            <img src="./public/imgs/games/tendencias/farming-simulator-25-year-1-bundle-year-1-bundle-pc-game-steam-cover.jpg"
+                                alt="farming-simulator-25">
+                            <span class="discount">-29%</span>
                         </div>
                     </a>
                     <div class="game-info">
-                        <p>The Elder Scrolls Online Deluxe</p>
-                        <p>$40.58</p>
+                        <p>Farming Simulator 25 - Year 1 Bundle</p>
+                        <p>$60.96</p>
+                    </div>
+                </div>
+                <div>
+                    <a href="#">
+                        <div>
+                            <img src="./public/imgs/games/tendencias/dragon-ball-sparking-zero-ultimate-edition-early-access-ultimate-edition-pc-game-steam-cover.jpg"
+                                alt="dragon-ball-sparking-zero-ultimate-edition">
+                            <span class="discount">-25%</span>
+                        </div>
+                    </a>
+                    <div class="game-info">
+                        <p>Dragon Ball: Sparking! ZERO Ultimate Edition</p>
+                        <p>$88.93</p>
+                    </div>
+                </div>
+                <div>
+                    <a href="#">
+                        <div>
+                            <img src="./public/imgs/games/tendencias/v-rising-pc-game-steam-cover.jpg" alt="v-rising">
+                            <span class="discount">-33%</span>
+                        </div>
+                    </a>
+                    <div class="game-info">
+                        <p>V Rising</p>
+                        <p>$24.89</p>
                     </div>
                 </div>
             </div>
@@ -339,76 +365,78 @@
                 <div>
                     <a href="#">
                         <div>
-                            <img src="./public/imgs/games/v-rising-pc-game-steam-cover.jpg" alt="buckshot-roulette">
-                            <span class="discount">-18%</span>
+                            <img src="./public/imgs/games/mas-vendidos/call-of-duty-modern-warfare-iii-ps5-playstation-5-game-playstation-store-cover.jpg"
+                                alt="call-of-duty-modern-warfare-iii">
+                            <span class="discount">-16%</span>
                         </div>
                     </a>
                     <div class="game-info">
-                        <p>V Rising</p>
-                        <p>$27.01</p>
+                        <p>Call of Duty: Modern Warfare III</p>
+                        <p>$71.88</p>
                     </div>
                 </div>
                 <div>
                     <a href="#">
                         <div>
-                            <img src="./public/imgs/games/motogp-24-pc-game-steam-cover.jpg" alt="buckshot-roulette">
-                            <span class="discount">-12%</span>
+                            <img src="./public/imgs/games/mas-vendidos/dying-light-2-stay-human-reloaded-edition-reloaded-edition-pc-juego-steam-cover.jpg"
+                                alt="dying-light-2-stay-human-reloaded-edition-reloaded-edition">
+                            <span class="discount">-32%</span>
                         </div>
                     </a>
                     <div class="game-info">
-                        <p>MotoGP 24</p>
-                        <p>$42.00</p>
+                        <p>Dying Light 2 Stay Human Reloaded Edition</p>
+                        <p>$24.67</p>
                     </div>
                 </div>
                 <div>
                     <a href="#">
                         <div>
-                            <img src="./public/imgs/games/v-rising-legacy-of-castlevania-premium-pack-pc-game-steam-cover.jpg"
-                                alt="buckshot-roulette">
-                            <span class="discount">-24%</span>
-                        </div>
-                    </a>
-                    <div class="game-info">
-                        <p>V Rising - Legacy of Castlevania Premium</p>
-                        <p>$16.99</p>
-                    </div>
-                </div>
-                <div>
-                    <a href="#">
-                        <div>
-                            <img src="./public/imgs/games/another-crab-s-treasure-pc-game-steam-cover.jpg"
-                                alt="buckshot-roulette">
-                            <span class="discount">-52%</span>
-                        </div>
-                    </a>
-                    <div class="game-info">
-                        <p>Another Crab's Treasure</p>
-                        <p>$16.25</p>
-                    </div>
-                </div>
-                <div>
-                    <a href="#">
-                        <div>
-                            <img src="./public/imgs/games/fallout-76-pc-game-steam-cover.jpg" alt="buckshot-roulette">
+                            <img src="./public/imgs/games/mas-vendidos/fallout-76-pc-game-steam-cover.jpg"
+                                alt="fallout-76">
                             <span class="discount">-78%</span>
                         </div>
                     </a>
                     <div class="game-info">
-                        <p>Fallout 76</p>
+                        <p>Fallaout 76</p>
                         <p>$9.99</p>
                     </div>
                 </div>
                 <div>
                     <a href="#">
                         <div>
-                            <img src="./public/imgs/games/grand-theft-auto-v-premium-online-edition-premium-online-edition-pc-game-rockstar-cover.jpg"
-                                alt="buckshot-roulette">
+                            <img src="./public/imgs/games/mas-vendidos/grand-theft-auto-v-premium-online-edition-premium-online-edition-pc-game-rockstar-cover.jpg"
+                                alt="grand-theft-auto-v-premium-online-edition">
                             <span class="discount">-72%</span>
                         </div>
                     </a>
                     <div class="game-info">
                         <p>Grand Theft Auto V: Premium Online Edition</p>
                         <p>$11.99</p>
+                    </div>
+                </div>
+                <div>
+                    <a href="#">
+                        <div>
+                            <img src="./public/imgs/games/mas-vendidos/v-rising-pc-game-steam-cover.jpg" alt="v-rising">
+                            <span class="discount">-33%</span>
+                        </div>
+                    </a>
+                    <div class="game-info">
+                        <p>V Rising</p>
+                        <p>$24.89</p>
+                    </div>
+                </div>
+                <div>
+                    <a href="#">
+                        <div>
+                            <img src="./public/imgs/games/mas-vendidos/test-drive-unlimited-solar-crown-gold-edition.jpg"
+                                alt="test-drive-unlimited-solar-crown-gold-edition">
+                            <span class="discount">-38%</span>
+                        </div>
+                    </a>
+                    <div class="game-info">
+                        <p>Test Drive Unlimited Solar Crown Gold Edition</p>
+                        <p>$53.57</p>
                     </div>
                 </div>
             </div>
