--- a/playstation.html
+++ b/playstation.html
@@ -22,7 +22,7 @@
             <nav class="aside-nav-container">
                 <a href="/#tendencias">Tendencias</a>
                 <a href="/#mas-vendidos">Más Vendidos</a>
-                <a href="/soporte">Soporte</a>
+                <a href="/soporte.html">Soporte</a>
                 <a href="/contacto.html">Contacto</a>
             </nav>
         </div>
@@ -180,7 +180,7 @@
                     <div>
                         <a href="#">
                             <div>
-                                <img src="./public/imgs/games/the-elder-scrolls-online-deluxe-upgrade-gold-road-deluxe-upgrade-pc-juego-steam-cover.jpg"
+                                <img src="./public/imgs/games/playstation/warhammer-40-000-space-marine-2-ultra-edition.jpg"
                                     alt="buckshot-roulette">
                                 <span class="discount">-24%</span>
                             </div>
